# mongodb-atlas-cli-ng

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: check-pr-title.yml  ci.yml  release.yml
examples/: download_cluster_log.rs  list_clusters.rs  print_default_profile.rs  use_client.rs
macros/: Cargo.toml
macros/src/: lib.rs  model.rs  parse.rs  render.rs
macros/src/snapshots/: mongodb_atlas_cli_macros__render__tests__snapshot_create_group_cluster.snap  mongodb_atlas_cli_macros__render__tests__snapshot_delete_group_cluster.snap  mongodb_atlas_cli_macros__render__tests__snapshot_download_group_cluster_log.snap  mongodb_atlas_cli_macros__render__tests__snapshot_get_group_cluster.snap  mongodb_atlas_cli_macros__render__tests__snapshot_get_no_url_params_non_paginated.snap  mongodb_atlas_cli_macros__render__tests__snapshot_list_group_clusters.snap  mongodb_atlas_cli_macros__render__tests__snapshot_paginated_get_with_url_params.snap  mongodb_atlas_cli_macros__render__tests__snapshot_post_with_url_params.snap  mongodb_atlas_cli_macros__render__tests__snapshot_update_group_cluster.snap
src/: lib.rs  path.rs
src/atlas/: client.rs  layer.rs  mod.rs  operations.rs  paginated.rs  version.rs
src/client/: auth.rs  digest.rs  error.rs  mod.rs  oauth.rs
src/config/: mod.rs
src/config/source/: global.rs  mod.rs  profile.rs
src/secrets/: encoding.rs  keyring.rs  legacy.rs  mod.rs
tests/: helper.rs  legacy_store.rs  load_config.rs  operation_macro.rs
tests/fixtures/: 01-global-properties.toml  02-user-account.toml  03-all-options.toml  05-all-credential-types.toml
