[package]
name = "mongodb-atlas-cli"
version = "0.0.2"
edition = "2024"
authors = ["Jeroen Vervaeke <atlas-cli-ng.s29p5@simplelogin.com>"]
description = "Opinionated alternative CLI and library to interact with the MongoDB Atlas Admin API"
license = "MIT"
repository = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"
homepage = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"
readme = "README.md"
keywords = ["mongodb", "atlas", "cli", "atlas-cli"]
categories = ["command-line-utilities", "database"]
exclude = ["cliff.toml"]

[dependencies]
base64 = "0.22.1"
config = "0.15.19"
dirs = "6.0.0"
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = { version = "0.9.8", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
