[package]
name = "mongodb-atlas-cli"
version = "0.0.1"
edition = "2024"
authors = ["Jeroen Vervaeke <atlas-cli-ng.s29p5@simplelogin.com>"]
description = "Opinionated alternative CLI and library to interact with the MongoDB Atlas Admin API"
license = "MIT"
repository = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"
homepage = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"
readme = "README.md"
keywords = ["mongodb", "atlas", "cli", "atlas-cli"]
categories = ["command-line-utilities", "database"]
exclude = ["cliff.toml"]

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
config = "0.15.19"
digest_auth = "0.3"
dirs = "6.0.0"
hex = "0.4.3"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27", features = ["ring", "http1", "http2", "webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "client-proxy", "tokio"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["sync"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1"
url = "2.5.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
