[package]
name = "mongodb-atlas-cli-macros"
version = "0.1.0"
edition = "2021"
authors = ["Jeroen Vervaeke <atlas-cli-ng.s29p5@simplelogin.com>"]
description = "Procedural macros for mongodb-atlas-cli operation derive"
license = "MIT"
repository = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"
homepage = "https://github.com/jeroenvervaeke/mongodb-atlas-cli-ng"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
insta = "1"
prettyplease = "0.2"

[lib]
proc-macro = true
